--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,26 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mcqs
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost/jpa_example
 #spring.datasource.username=root
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.thymeleaf.cache=false
+server.servlet.context-path=/
+
+spring.datasource.tomcat.max-wait= 20000
+spring.datasource.tomcat.max-active= 50
+spring.datasource.tomcat.max-idle= 20
+spring.datasource.tomcat.min-idle= 15
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#http://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#common-application-properties
+#search multipart
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
+profile.upload.image.path=//src//main//resources//static//img//profile//
+
+spring.thymeleaf.cache= false
