--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.password=a1b8edd029755dafbc544f1338f818f05cf2da7f874aa6904dba1
 
 
 #server.port=${PORT:5000}
+server.port=${PORT:8080}
 
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mcqs
 #spring.datasource.username=root
